fix: fixes spacing

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ label {
   font-size: larger;
   text-transform: capitalize;
   margin-bottom: 3%;
+  margin-top: 3%;
 }
 
 input {
@@ -56,14 +57,14 @@ input {
 .error {
   color: rgb(239 68 68);
   font-size: medium;
-  margin-top: -2%;
+  margin-top: 1%;
   margin-bottom: 3%;
 }
 select {
   width: 100%;
   padding: 3%;
   text-transform: capitalize;
-  margin-bottom: 5%;
+  /* margin-bottom: 10%; */
   border-radius: 10px;
   background-color: rgb(238 242 255);
   font-size: large;
@@ -77,7 +78,7 @@ select {
   font-size: x-large;
   padding: 3%;
   border-radius: 10px;
-  margin-top: 5%;
+  margin-top: 10%;
 }
 
 .start-btn:hover {
@@ -175,7 +176,7 @@ select {
 
 .display-score {
   font-size: larger;
-  margin: 12% 0px;
+  margin-top: 10%;
 }
 
 .spin-loader {
